--- a/css/no-card.css
+++ b/css/no-card.css
@@ -4177,36 +4177,6 @@ textarea.form-control-lg {
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
   border-radius: var(--bs-card-border-radius);
 }
-
-.card2 {
-  /* --bs-card-spacer-y: 1rem; */
-  /* --bs-card-spacer-x: 1rem; */
-  /* --bs-card-title-spacer-y: 0.5rem; */
-  /* --bs-card-border-width: 1px; */
-  --bs-card-border-color: var(--bs-border-color-translucent);
-  --bs-card-border-radius: 0.375rem;
-  --bs-card-box-shadow: ;
-  --bs-card-inner-border-radius: calc(0.375rem - 1px);
-  --bs-card-cap-padding-y: 0.5rem;
-  --bs-card-cap-padding-x: 1rem;
-  --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
-  --bs-card-cap-color: ;
-  --bs-card-height: ;
-  --bs-card-color: ;
-  --bs-card-bg: #fff;
-  --bs-card-img-overlay-padding: 1rem;
-  --bs-card-group-margin: 0.75rem;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  height: var(--bs-card-height);
-  word-wrap: break-word;
-  background-color: var(--bs-card-bg);
-  background-clip: border-box;
-  border: var(--bs-card-border-width) solid var(--bs-card-border-color);
-  border-radius: var(--bs-card-border-radius);
-}
 .card > hr {
   margin-right: 0;
   margin-left: 0;
@@ -4237,8 +4207,7 @@ textarea.form-control-lg {
 }
 
 .card-title {
-  /* margin-bottom: var(--bs-card-title-spacer-y); */
-margin-top: 15%;
+  margin-bottom: var(--bs-card-title-spacer-y);
 }
 
 .card-subtitle {
@@ -10862,8 +10831,8 @@ html {
 }
 
 .content-section {
-  padding-top: 3.5rem;
-  padding-bottom: 1.5rem;
+  padding-top: 7.5rem;
+  padding-bottom: 7.5rem;
 }
 
 .content-section-heading h2, .content-section-heading .h2 {
@@ -11042,7 +11011,7 @@ footer.footer .social-link:hover {
   position: relative;
   display: table;
   width: 100%;
-  height: 70%;
+  height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
   background-position: center center;
@@ -11132,237 +11101,37 @@ footer.footer .social-link:hover {
   background-color: #fff;
   color: #1D809F;
   height: 7rem;
-  width: 7rem;
+  width: 5rem;
   display: block;
   line-height: 7.5rem;
   font-size: 2.25rem;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
 
-.navbar-brand {
-  padding-top: var(--bs-navbar-brand-padding-y);
-  padding-bottom: var(--bs-navbar-brand-padding-y);
-  margin-right: var(--bs-navbar-brand-margin-end);
-  font-size: var(--bs-navbar-brand-font-size);
-  color: var(--bs-navbar-brand-color);
-  text-decoration: none;
-  white-space: nowrap;
-}
-.navbar-brand:hover, .navbar-brand:focus {
-  color: var(--bs-navbar-brand-hover-color);
-}
-
-.img-profile {
-  margin: 15px auto;
-  display: block;
-  width: 90%;
-  border: 8px solid #2c2f3f;
-}
-
-.social-links a {
-  font-size: 18px;
-  display: inline-block;
-  background: #212431;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-}
-
-.section-title h2 {
-  font-size: 32px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-  color: #173b6c;
-}
-
-/*--------------------------------------------------------------
-# Akills
---------------------------------------------------------------*/
-.skills .progress {
-  height: 60px;
-  display: block;
-  background: none;
-  border-radius: 0;
-}
-
-.skills .progress .skill {
-  padding: 0;
-  margin: 0 0 6px 0;
-  text-transform: uppercase;
-  display: block;
-  font-weight: 600;
-  font-family: "Poppins", sans-serif;
-  color: #050d18;
-}
-
-.skills .progress .skill .val {
-  float: right;
-  font-style: normal;
-}
-
-.skills .progress-bar-wrap {
-  background: #dce8f8;
-  height: 10px;
-}
-
-.skills .progress-bar {
-  width: 1px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #149ddd;
-}
-
-/*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
-section {
-  padding: 20px 0;
-  overflow: hidden;
-}
-
-.section-bg {
-  background: #f5f8fd;
-}
-
-.section-title {
-  padding-bottom: 30px;
-}
-
-.section-title h2 {
-  font-size: 32px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-  color: #173b6c;
-}
-
-.section-title h2::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 50px;
-  height: 3px;
-  background: #149ddd;
-  bottom: 0;
-  left: 0;
-}
-
-.section-title p {
-  margin-bottom: 0;
-}
-
-.main-name{
-  margin-left: 15%;
-}
-
-.top{
-  margin-top: 4%;;
-}
-
-.twPc-div {
-  background: #fff none repeat scroll 0 0;
-  border: 1px solid #e1e8ed;
-  border-radius: 6px;
-  height: 520px;
-  max-width: 100%; 
-  margin-bottom: 4%;
-}
-
-.twPc-bg {
-  background-image: url("https://pbs.twimg.com/profile_banners/50988711/1384539792/600x200");
-  background-position: 0 50%;
-  background-size: 100% auto;
-  border-bottom: 1px solid #e1e8ed;
-  border-radius: 4px 4px 0 0;
-  height: 95px;
+.divider-custom {
+  margin: 1.25rem 0 1.5rem;
   width: 100%;
+  display: flex;
+  justify-content: left;
+  align-items: left;
 }
 
-.twPc-block {
-  display: block !important;
+.divider-custom.divider-light .divider-custom-line {
+  background-color: #000;
 }
-.twPc-button {
-  margin: -35px -10px 0;
-  text-align: right;
+
+.divider-custom .divider-custom-line:first-child {
+  margin-right: 1rem;
+}
+.divider-custom .divider-custom-line {
   width: 100%;
+  max-width: 4rem;
+  height: 0.25rem;
+  background-color: #000;
+  border-radius: 1rem;
+  border-color: #000;
 }
-.twPc-avatarLink {
-  background-color: #fff;
-  border-radius: 6px;
-  display: inline-block !important;
-  float: left;
-  margin: -30px 5px 0 8px;
-  max-width: 100%;
-  padding: 1px;
-  vertical-align: bottom;
-}
-.twPc-avatarImg {
-  border: 2px solid #fff;
-  border-radius: 7px;
-  box-sizing: border-box;
-  color: #fff;
-  height: 75%;
-  width: 350px;
-}
-.twPc-divUser {
-  margin: 5px 0 0;
-}
-.twPc-divName {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 21px;
-}
-.twPc-divName a {
-  color: inherit !important;
-}
-.twPc-divStats {
-  margin-left: 11px;
-  padding: 10px 0;
-}
-.twPc-Arrange {
-  box-sizing: border-box;
-  display: table;
-  margin: 0;
-  min-width: 100%;
-  padding: 0;
-  table-layout: auto;
-}
-ul.twPc-Arrange {
-  list-style: outside none none;
-  margin: 0;
-  padding: 0;
-}
-.twPc-ArrangeSizeFit {
-  display: table-cell;
-  padding: 0;
-  vertical-align: top;
-}
-.twPc-ArrangeSizeFit a:hover {
-  text-decoration: none;
-}
-.twPc-StatValue {
-  display: block;
-  font-size: 18px;
-  font-weight: 500;
-  transition: color 0.15s ease-in-out 0s;
-}
-.twPc-StatLabel {
-  color: #8899a6;
-  font-size: 10px;
-  letter-spacing: 0.02em;
-  overflow: hidden;
-  text-transform: uppercase;
-  transition: color 0.15s ease-in-out 0s;
-}
-#services{
-  margin-top: 0%;
+
+.masthead-avatar {
+  width: 23rem;
 }
