new template executive palette

--- a/css/no-card.css
+++ b/css/no-card.css
@@ -8040,7 +8040,8 @@ textarea.form-control-lg {
 
 .text-secondary {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+  /* color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important; */
+  color:#000 !important;
 }
 
 .text-success {
