--- a/css/no-card.css
+++ b/css/no-card.css
@@ -11165,3 +11165,62 @@ mark {
   background-color: #D9D7D9;
   color: #000;
 }
+
+/* new card styles */
+.text-gray-800 {
+  color: #5a5c69!important;
+}
+.border-left-primary {
+  border-left: 0.25rem solid #4e73df!important;
+}
+/* 
+.h-100 {
+  width: 55%;
+  height: 100% !important;
+}
+.text-gray-800 {
+  color: #5a5c69!important;
+}
+.font-weight-bold {
+  font-weight: 700!important;
+}
+.mb-0, .my-0 {
+  margin-bottom: 0!important;
+}
+.h5, h5 {
+  font-size: 1.25rem;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0.5rem;
+  font-weight: 400;
+  line-height: 1.2;
+}
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+.mb-4, .my-4 {
+  margin-bottom: 1.5rem!important;
+} */
+/* @media (min-width: 1200px){
+  .col-xl-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+}
+
+@media (min-width: 768px){
+  .col-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+    position: relative;
+    width: 100%;
+    padding-right: 0.75rem;
+    padding-left: 0.75rem;
+  }
+  *, ::after, ::before {
+    box-sizing: border-box;
+  }
+  
+} */
