--- a/css/no-card.css
+++ b/css/no-card.css
@@ -11167,12 +11167,12 @@ mark {
 }
 
 /* new card styles */
-.text-gray-800 {
+/* .text-gray-800 {
   color: #5a5c69!important;
 }
 .border-left-primary {
   border-left: 0.25rem solid #4e73df!important;
-}
+} */
 /* 
 .h-100 {
   width: 55%;
