--- a/css/styles.css
+++ b/css/styles.css
@@ -11038,13 +11038,13 @@ footer.footer .social-link:hover {
   }
 }
 .masthead {
-  min-height: 30rem;
-  position: relative;
-  display: table;
+  /* min-height: 30rem; */
+  /* position: relative; */
+  /* display: table; */
   width: 100%;
   height: 70%;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  /* padding-top: 8rem; */
+  /* padding-bottom: 8rem; */
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
